# rag-app-deepseek

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
rag_app_deepseek/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
rag_app_deepseek/services/: __init__.py
rag_app_deepseek/services/kafka/: lifetime.py
rag_app_deepseek/services/milvus/: lifetime.py  migration.py  schema.py
rag_app_deepseek/services/ollama/: __init__.py  ollama_services.py  service.py
rag_app_deepseek/services/text_embeddings/: __init__.py  consumer.py  service.py  text_embeddings_consumer.py
rag_app_deepseek/tests/: __init__.py  test_kafka.py
rag_app_deepseek/web/: __init__.py  application.py  lifetime.py
rag_app_deepseek/web/api/: __init__.py  router.py
rag_app_deepseek/web/api/docs/: __init__.py
rag_app_deepseek/web/api/echo/: __init__.py  views.py
rag_app_deepseek/web/api/kafka/: __init__.py  views.py
rag_app_deepseek/web/api/monitoring/: __init__.py
rag_app_deepseek/web/api/search/: __init__.py  schema.py  views.py
