[tool.poetry]
name = "rag_app_deepseek"
version = "0.1.0"
description = "RAG (Retrieval-Augmented Generation) application using Deepseek LLM and Vector Database"
authors = []
maintainers = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.8"
uvicorn = { version = "^0.17.0", extras = ["standard"] }
pydantic = "^2.10.6"
yarl = "^1.7.2"
ujson = "^5.1.0"
aiofiles = "^0.8.0"
httptools = "^0.3.0"
loguru = "^0.6.0"
aiokafka = "^0.7.2"
httpx = "^0.28.1"
pydantic-settings = "^2.7.1"
ollama = "^0.4.7"
pymilvus = "^2.5.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
yesqa = "^1.3.0"
pre-commit = "^2.19.0"
wemake-python-styleguide = "^0.16.1"
black = "^22.3.0"
autoflake = "^1.4"
pytest-cov = "^3.0.0"
anyio = "^3.6.1"
pytest-env = "^0.6.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["rag_app_deepseek"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
